# sec-edgar-downloader

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  V4 Migration Guide.md  codecov.yml  ideas.md  pbcopy  process_tickers.py  publish.sh  pyproject.toml  requirements.txt  sec_edgar_downloader.py  setup.cfg  setup.py  test.py  test_all_import.py  test_granular_import.py  tox.ini  useful_links.txt
.github/: dependabot.yml
.github/workflows/: continuous-integration-workflow.yml  continuous_integration.yml  main.yml  release.yml
OLD_sec_edgar_downloader/: _constants.py
OLD_tests/: test_detail_downloads.py  test_downloader_class.py  test_filing_url_retrieval.py  test_network_errors.py
OLD_tests/sample-filings/: aapl-4-20201013.xml  aapl-8k-20191115.txt
docs/: conf.py  index.rst  v4_migration_guide.md
requirements/: requirements-tests.txt  requirements.txt
sec_edgar_downloader/: Downloader.py  _Downloader.py  __init__.py  _constants.py  _orchestrator.py  _sec_gateway.py  _types.py  _utils.py  downloader.py  rate_limiter.py  ticker_validation.json  ticker_validation.py  utils.py
tests/: _testing_utils.py  conftest.py  test_after_and_before_date.py  test_amends.py  test_bad_responses.py  test_before_date.py  test_detail_downloads.py  test_downloader.py  test_downloader_class.py  test_downloader_end_to_end.py  test_end_to_end_integration.py  test_file_content.py  test_file_structure.py  test_file_structure_and_content.py  test_filing_downloads.py  test_filing_url_retrieval.py  test_folder_structure.py  test_init_downloader.py  test_invalid_get_input.py  test_orchestrator.py  test_query.py  test_rate_limiter.py  test_sec_gateway.py  test_user_input.py  test_utils.py  testing_utils.py  utils.py
tests/helpers/: utils.py
tests_old/: conftest.py  test_amends.py  test_bad_responses.py  test_before_date.py  test_init_downloader.py
(+3 files in other folders)
