[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sec-edgar-downloader"
authors = [{name = "Jad Chaar", email = "jad.chaar@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pyrate-limiter>=4.0.0"
]
requires-python = ">=3.10"
description = "Download SEC filings from the EDGAR database using Python"
keywords = [
    "sec",
    "edgar",
    "filing",
    "financial",
    "finance",
    "stocks",
    "mutual-funds",
    "sec.gov"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pre-commit",
    "pytest",
    "pytest-cov"
]
doc = [
    "doc8",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints"
]

[project.urls]
Documentation = "https://sec-edgar-downloader.readthedocs.io"
Source = "https://github.com/jadchaar/sec-edgar-downloader"
Issues = "https://github.com/jadchaar/sec-edgar-downloader/issues"

[tool.flit.sdist]
exclude = [
    "tests/test_data/",
]

[tool.flit.module]
name = "sec_edgar_downloader"
